--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/assets/css/docs.css" rel="stylesheet">
+    <link href="/assets/css/blog.css" rel="stylesheet">
     <link href="/assets/css/base.css" rel="stylesheet">
     <link href="/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
@@ -86,7 +86,8 @@
                   <li class="divider"></li>
                   <li class="nav-header">OS X (Mac OS X)</li>
                   <li><a href="/pages/tools/Homebrew.html">Homebrew - 很强大软件包管理器</a></li>
-                  <li><a href="/pages/tools/iTerm.html">iTerm - 很不错的终端</a></li>
+                  <li><a href="/pages/tools/zsh.html">zsh - 强大的Shell</a></li>
+                  <li><a href="/pages/tools/iTerm2.html">iTerm2 - 很不错的终端</a></li>
                   <li><a href="/pages/tools/tmux.html">tmux - 很不错的终端复用器</a></li>
                 </ul>
               </li>
@@ -135,5 +136,16 @@
     <script src="/assets/js/google-code-prettify/prettify.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/application.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-38545530-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </body>
 </html>
