--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,13 +43,9 @@
               <li class="dropdown{% if page.url contains 'language' %} active{% endif %}">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">Language <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/pages/language/java.html">Java</a></li>
                   <li><a href="/pages/language/scala.html">Scala</a></li>
                   <li><a href="/pages/language/ruby.html">Ruby</a></li>
                   <li><a href="/pages/language/python.html">Python</a></li>
-                  <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
-                  <li><a href="/pages/language/jquery.html">jQuery</a></li>
-                  <li><a href="/pages/language/javascript.html">JavaScript</a></li>
                   <li><a href="/pages/language/erlang.html">Erlang</a></li>
                   <li><a href="/pages/language/go.html">Golang</a></li>
                   <li><a href="/pages/language/lua.html">Lua</a></li>
@@ -58,6 +54,14 @@
                     <ul class="dropdown-menu">
                       <li><a href="/pages/language/c/cpp.html">C++ 基础</a></li>
                       <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
+                    </ul>
+                  </li>
+                  <li class="dropdown-submenu">
+                    <a href="javascript:void(0)">JavaScript</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/pages/language/javascript.html">JavaScript</a></li>
+                      <li><a href="/pages/language/jquery.html">jQuery</a></li>
+                      <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
                     </ul>
                   </li>
                   <li><a href="/pages/language/php.html">PHP</a></li>
