--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,10 +3,12 @@ layout: default
 ---
 
 <ul style="list-style:none; margin:0px;">{% for post in site.posts %}{% for tag in post.tags %}{% if tag == page.tag %}
-            <li>
-                <h4 style="font-weight:normal;">
-                    <small>{{ post.date | date:"%Y-%m-%d" }} » </small>
-                    <a href="{{ post.url }}" target="_blank">{{ post.title }}</a>
-                </h4>
-            </li>{% endif %}{% endfor %}{% endfor %}
-        </ul>
+    {% capture y %}{{post.date | date:"%Y"}}{% endcapture %}{% if year != y %}{% assign year = y %}
+                    <li><blockquote><h3>{{ y }}</h3></blockquote></li>{% endif %}
+                    <li>
+                        <h4 style="font-weight:normal;">
+                            <small>{{ post.date | date:"%b %d" }} » </small>
+                            <a href="{{ post.url }}">{{ post.title }}</a>
+                        </h4>
+                    </li>{% endif %}{% endfor %}{% endfor %}
+                </ul>
