--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,12 +48,19 @@
                   <li><a href="/pages/language/python.html">Python</a></li>
                   <li><a href="/pages/language/erlang.html">Erlang</a></li>
                   <li><a href="/pages/language/go.html">Golang</a></li>
-                  <li><a href="/pages/language/lua.html">Lua</a></li>
+                  <li class="dropdown-submenu">
+                    <a href="/pages/language/c.html">Lua</a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/pages/language/lua.html">Lua 基础</a></li>
+                      <li><a href="/pages/language/lua/luajit.html">LuaJIT</a></li>
+                    </ul>
+                  </li>
                   <li class="dropdown-submenu">
                     <a href="/pages/language/c.html">C/C++</a>
                     <ul class="dropdown-menu">
                       <li><a href="/pages/language/c/cpp.html">C++ 基础</a></li>
                       <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
+                      <li><a href="/pages/language/c/box2d.html">Box2D C++物理引擎</a></li>
                     </ul>
                   </li>
                   <li class="dropdown-submenu">
