--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,24 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
 
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="/assets/css/blog.css" rel="stylesheet">
-    <link href="/assets/css/base.css" rel="stylesheet">
+    <link href="/assets/components/bootstrap/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
+
+      .container-narrow {
+        margin: {% if page.navigation %}40px auto {% endif %}0 auto;      
+        max-width: 700px;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+    </style>
+    <link href="/assets/components/bootstrap/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
     <link href="/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/ico/apple-touch-icon-144-precomposed.png">
@@ -22,132 +36,113 @@
     <meta name="google-site-verification" content="mI0pbdIvMWuVMULdngJ475un6RZmA_2jFCvVU-Ws7-U" />
   </head>
   
-  <body data-spy="scroll" data-target=".sidenavbar">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="/about.html">{{ site.title }}</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="{% if page.url contains 'index' %}active{% endif %}">
-                <a href="/index.html">Home</a>
-              </li>
-              <li class="{% if page.url contains 'archive' %}active{% endif %}">
-                <a href="/archive.html">Archive</a>
-              </li>
-              <li class="dropdown{% if page.url contains 'language' %} active{% endif %}">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Language <b class="caret"></b></a>
+  <body data-spy="scroll" data-target=".sidenavbar" data-offset="39">
+     <div class="container-narrow">
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="{% if page.url contains 'index' %}active{% endif %}"><a href="/index.html">Home</a></li>
+          <li class="{% if page.url contains 'archive' %}active{% endif %}"><a href="/archive.html">Archive</a></li>
+          <li class="dropdown{% if page.url contains 'language' %} active{% endif %}">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Language <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/pages/language/scala.html">Scala</a></li>
+              <li><a href="/pages/language/ruby.html">Ruby</a></li>
+              <li><a href="/pages/language/python.html">Python</a></li>
+              <li><a href="/pages/language/erlang.html">Erlang</a></li>
+              <li><a href="/pages/language/go.html">Golang</a></li>
+              <li class="dropdown-submenu">
+                <a href="/pages/language/c.html">Lua</a>
                 <ul class="dropdown-menu">
-                  <li><a href="/pages/language/scala.html">Scala</a></li>
-                  <li><a href="/pages/language/ruby.html">Ruby</a></li>
-                  <li><a href="/pages/language/python.html">Python</a></li>
-                  <li><a href="/pages/language/erlang.html">Erlang</a></li>
-                  <li><a href="/pages/language/go.html">Golang</a></li>
-                  <li class="dropdown-submenu">
-                    <a href="/pages/language/c.html">Lua</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/pages/language/lua.html">Lua 基础</a></li>
-                      <li><a href="/pages/language/lua/luajit.html">LuaJIT</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown-submenu">
-                    <a href="/pages/language/c.html">C/C++</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/pages/language/c/cpp.html">C++ 基础</a></li>
-                      <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
-                      <li><a href="/pages/language/c/box2d.html">Box2D C++物理引擎</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown-submenu">
-                    <a href="javascript:void(0)">JavaScript</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/pages/language/javascript.html">JavaScript</a></li>
-                      <li><a href="/pages/language/jquery.html">jQuery</a></li>
-                      <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="/pages/language/php.html">PHP</a></li>
+                  <li><a href="/pages/language/lua.html">Lua 基础</a></li>
+                  <li><a href="/pages/language/lua/luajit.html">LuaJIT</a></li>
                 </ul>
               </li>
-              <li class="dropdown{% if page.url contains 'tools' %} active{% endif %}">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tools <b class="caret"></b></a>
+              <li class="dropdown-submenu">
+                <a href="/pages/language/c.html">C/C++</a>
                 <ul class="dropdown-menu">
-                  <li class="dropdown-submenu">
-                    <a href="javascript:void(0)">项目管理工具</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
-                      <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
-                      <li><a href="/pages/tools/Git.html">Git - 项目版本管理工具</a></li>
-                      <li><a href="/pages/tools/svn.html">Svn - 项目版本管理工具</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown-submenu">
-                    <a href="javascript:void(0)">开发工具</a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/pages/tools/vim.html">Vim - 很强大的文本编辑器</a></li>
-                      <li><a href="/pages/tools/Emacs.html">Emacs - 很强大的文本编辑器</a></li>
-                      <li><a href="/pages/tools/SublimeText.html">Sublime Text - 很强大的文本编辑器</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="/pages/tools/Mylyn.html">Mylyn - 任务管理工具</a></li>
-                  <li><a href="/pages/tools/rsync.html">rsync - 很强大的文件同步备份工具</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">OS X (Mac OS X)</li>
-                  <li><a href="/pages/tools/Homebrew.html">Homebrew - 很强大软件包管理器</a></li>
-                  <li><a href="/pages/tools/zsh.html">zsh - 强大的Shell</a></li>
-                  <li><a href="/pages/tools/iTerm2.html">iTerm2 - 很不错的终端</a></li>
-                  <li><a href="/pages/tools/tmux.html">tmux - 很不错的终端复用器</a></li>
+                  <li><a href="/pages/language/c/cpp.html">C++ 基础</a></li>
+                  <li><a href="/pages/language/c/Cocos2dx.html">Cocos2d-x 开源游戏引擎</a></li>
+                  <li><a href="/pages/language/c/box2d.html">Box2D C++物理引擎</a></li>
                 </ul>
               </li>
-              <li class="dropdown{% if page.url contains 'favorites' %} active{% endif %}">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Site <b class="caret"></b></a>
+              <li class="dropdown-submenu">
+                <a href="javascript:void(0)">JavaScript</a>
                 <ul class="dropdown-menu">
-                  <li><a href="/pages/favorites/ruby.html">About Ruby</a></li>
-                  <li><a href="/pages/favorites/eclipse.html">About Eclipse</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">Eclipse+Android+Maven</a></li>
+                  <li><a href="/pages/language/javascript.html">JavaScript</a></li>
+                  <li><a href="/pages/language/jquery.html">jQuery</a></li>
+                  <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
                 </ul>
               </li>
-              <li class="dropdown{% if page.url contains 'android' %} active{% endif %}">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Android <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="/pages/development/android/NDK.html">NDK - 交叉编译工具链</a></li>
-                  <li><a href="/pages/development/android/dialog.html">Dialog - 对话框控件</a></li>
-                </ul>
-              </li>
+              <li><a href="/pages/language/php.html">PHP</a></li>
             </ul>
-          </div>
-        </div>
+          </li>
+          <li class="dropdown{% if page.url contains 'tools' %} active{% endif %}">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tools <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu">
+                <a href="javascript:void(0)">项目管理工具</a>
+                <ul class="dropdown-menu">
+                  <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
+                  <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
+                  <li><a href="/pages/tools/Git.html">Git - 项目版本管理工具</a></li>
+                  <li><a href="/pages/tools/svn.html">Svn - 项目版本管理工具</a></li>
+                </ul>
+              </li>
+              <li class="dropdown-submenu">
+                <a href="javascript:void(0)">开发工具</a>
+                <ul class="dropdown-menu">
+                  <li><a href="/pages/tools/vim.html">Vim - 很强大的文本编辑器</a></li>
+                  <li><a href="/pages/tools/Emacs.html">Emacs - 很强大的文本编辑器</a></li>
+                  <li><a href="/pages/tools/SublimeText.html">Sublime Text - 很强大的文本编辑器</a></li>
+                </ul>
+              </li>
+              <li><a href="/pages/tools/Mylyn.html">Mylyn - 任务管理工具</a></li>
+              <li><a href="/pages/tools/rsync.html">rsync - 很强大的文件同步备份工具</a></li>
+              <li class="divider"></li>
+              <li class="nav-header">OS X (Mac OS X)</li>
+              <li><a href="/pages/tools/Homebrew.html">Homebrew - 很强大软件包管理器</a></li>
+              <li><a href="/pages/tools/zsh.html">zsh - 强大的Shell</a></li>
+              <li><a href="/pages/tools/iTerm2.html">iTerm2 - 很不错的终端</a></li>
+              <li><a href="/pages/tools/tmux.html">tmux - 很不错的终端复用器</a></li>
+            </ul>
+          </li>
+          <li class="dropdown{% if page.url contains 'favorites' %} active{% endif %}">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Site <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/pages/favorites/ruby.html">About Ruby</a></li>
+              <li><a href="/pages/favorites/eclipse.html">About Eclipse</a></li>
+              <li class="divider"></li>
+            </ul>
+          </li>
+          <li class="dropdown{% if page.url contains 'android' %} active{% endif %}">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Android <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/pages/development/android/NDK.html">NDK - 交叉编译工具链</a></li>
+              <li><a href="/pages/development/android/dialog.html">Dialog - 对话框控件</a></li>
+            </ul>
+          </li>
+        </ul>
+        <h3 class="muted">{{ site.title }}</h3>
       </div>
+
+      <hr>
+
+      {% if page.navigation %}<!-- 子导航栏 -->
+      <div class="sidenavbar">
+        {% include sidenav.ext %}
+      </div>
+      {% endif %}
+      
+      {{ content }}
+      
+      <hr>
+
+      {% include footer.ext %}
     </div>
 
-    {% include header.ext %}
-    <div class="container">
-        <div class="row">
-            {% if page.navigation %}
-            <div class="span3 sidenavbar">
-                {% include sidenav.ext %}
-            </div>
-            <div class="span9">
-                {{ content }}
-            </div>
-            {% else %}
-            <div class="span12">
-                {{ content }}
-            </div>
-            {% endif %}
-        </div>
-    </div>
-    {% include footer.ext %}
-
-    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/components/jquery/jquery.min.js"></script>
     <script src="/assets/js/google-code-prettify/prettify.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/components/bootstrap/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/application.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
