--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,14 +82,14 @@
                   <li><a href="/pages/language/nodejs.html">Nodejs</a></li>
                 </ul>
               </li>
-              <li><a href="/pages/language/php.html">PHP</a></li>
+              <li><a href="/pages/language/objective-c.html">Objective-C</a></li>
             </ul>
           </li>
-          <li class="dropdown{% if page.url contains 'tools' or page.url contains 'os' and page.date == null %} active{% endif %}">
+          <li class="dropdown {% if page.url contains 'tools' or page.url contains 'os' and page.date == null %} active{% endif %}">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tools <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li class="dropdown-submenu">
-                <a href="javascript:void(0)">项目管理工具</a>
+                <a tabindex="-1" href="javascript:void(0)">项目管理工具</a>
                 <ul class="dropdown-menu">
                   <li><a href="/pages/tools/Maven.html">Maven - 项目管理工具</a></li>
                   <li><a href="/pages/tools/Ant.html">Ant - 项目构建工具</a></li>
