--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
             .title {
                 font-weight: bold;
             }
+
+            .github-box-title h3 {
+                line-height: 1;
+            }
         </style>
         <link href="/assets/components/bootstrap/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
         <link href="/assets/css/style.css" rel="stylesheet">
