--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -167,7 +167,7 @@
         <script src="/assets/components/bootstrap/bootstrap/js/bootstrap.min.js"></script>
         <script src="/assets/js/application.js"></script>
         <script type="text/javascript" src="https://raw.github.com/JoelSutherland/GitHub-jQuery-Repo-Widget/master/jquery.githubRepoWidget.min.js"></script>
-
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-38545530-1']);
