--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+        <title>{% if page.title %}{{ page.title }} - {% endif %} {{ page.description }} - {{ site.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{ site.description }}">
         <meta name="author" content="{{ site.author }}">
