--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,13 @@
         <link rel="shortcut icon" href="/assets/ico/favicon.png">
 
         <meta name="google-site-verification" content="mI0pbdIvMWuVMULdngJ475un6RZmA_2jFCvVU-Ws7-U" />
+        <script type="text/javascript">
+          (function() {
+            var po = document.createElement("script"); po.type = "text/javascript"; po.async = true;
+            po.src = "https://apis.google.com/js/plusone.js?publisherid=104102834391130673606";
+            var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(po, s);
+          })();
+        </script>
     </head>
 
     <body data-spy="scroll" data-target=".sidenavbar" data-offset="39">
