--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
         <meta name="description" content="{{ site.description }}">
         <meta name="author" content="{{ site.author }}">
 
+        <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
         <link href="/assets/components/bootstrap/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <script type="text/javascript">
+            var host = "blog.linguofeng.com";
+            if ((host == window.location.host) && (window.location.protocol != "https:"))
+                window.location.protocol = "https";
+        </script>
         <style type="text/css">
             body {
                 padding-top: 20px;
