--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             }
 
             .container-narrow {
-                margin: {% if page.navigation %}40px auto {% endif %}0 auto;      
+                margin: {% if page.navigation %}40px auto {% endif %}0 auto;
                 max-width: 700px;
             }
             .container-narrow > hr {
@@ -40,7 +40,7 @@
             section {
                 font-family: "Microsoft YaHei Mono", "Microsoft YaHei";
             }
-            
+
             .title {
                 font-weight: bold;
             }
@@ -180,7 +180,7 @@
         <script src="/assets/components/bootstrap/bootstrap/js/bootstrap.min.js"></script>
         <script src="/assets/js/application.js"></script>
         <script type="text/javascript" src="https://raw.github.com/JoelSutherland/GitHub-jQuery-Repo-Widget/master/jquery.githubRepoWidget.min.js"></script>
-        <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-38545530-1']);
