--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,11 +28,11 @@
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
   <meta name="google-site-verification" content="mI0pbdIvMWuVMULdngJ475un6RZmA_2jFCvVU-Ws7-U" />
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     (function() {
       var po = document.createElement("script"); po.type = "text/javascript"; po.async = true;
       po.src = "https://apis.google.com/js/plusone.js?publisherid=104102834391130673606";
       var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(po, s);
     })();
-  </script>
+  </script> -->
 </head>
